initial site files

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </article>
         
         <article id="right">
-            <h1>Match This Number: <span id="computer"></span></h1>
-            <h1>Your Number: <span id="user"></span></h1>
+            <p class="top">Match This Number: <span id="computer"></span></p><br>
+            <p class="bottom">Your Number: <span id="user"></span></p>
             <hr>
-            <h1>Wins:<span id="wins"></span></h1>
-            <h1>Losses:<span id="losses"></span></h1>
+            <p class="top">Wins: <span id="wins"></span></p><br>
+            <p class="bottom">Losses: <span id="losses"></span></p>
         </article>
       </section>
       
